
syntax = "proto3";

package chitchat_transport_api;

service ChitchatTransport {
    rpc send_msg(ChitchatRpcMessage) returns (Empty);
}

message Empty {};

message ChitchatRpcMessage {
    bytes message = 1;
    bytes source = 2;
}